syntax = "proto3" ;

option go_package = "github.com/Hayato360/go_shop" ;

message Empty {} 

message CredentialSearchReq {
    string accessToken = 1 ;
} 

message CredentialSearchRes {
    bool isValid = 1 ;
}

message RolesCountReq {}

message RolesCountRes {
    int64 count = 1 ;
}

//  Methods


service AuthGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (CredentialSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}

